WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290359
objectIsRelayoutBoundary doesn't account for baseline changes across the boundary
https://bugs.webkit.org/show_bug.cgi?id=290359
Summary
objectIsRelayoutBoundary doesn't account for baseline changes across the boun...
Matt Woodrow
Reported
2025-03-24 19:28:00 PDT
Being an independent formatting context isn't sufficient to be a layout boundary, as placement within the formatting context can affect the baseline positioning of things outside. We need to prevent these being treated as boundaries if they are inside an inline formatting context.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-03-24 19:29:51 PDT
<
rdar://problem/147799932
>
Matt Woodrow
Comment 2
2025-03-24 20:51:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/42977
EWS
Comment 3
2025-03-25 12:26:21 PDT
Committed
292662@main
(cb80e57398c2): <
https://commits.webkit.org/292662@main
> Reviewed commits have been landed. Closing PR #42977 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug