objectIsRelayoutBoundary doesn't account for baseline changes across the boundary. https://bugs.webkit.org/show_bug.cgi?id=290359 <rdar://147799932>

Reviewed by Alan Baradlay.

Being an independent formatting context isn't sufficient to be a layout
boundary, as placement within the formatting context can affect the baseline
positioning of things outside.

We need to prevent these being treated as boundaries if they are inside an
formatting context that uses baselines.

Caches the lookup of nearest ancestor baseline formatting context to prevent extra
ancestor walks during markContainingBlocksForLayout.

* LayoutTests/fast/layout/relayout-boundary-inside-flex-expected.html: Added.
* LayoutTests/fast/layout/relayout-boundary-inside-flex.html: Added.
* LayoutTests/fast/layout/relayout-boundary-inside-inline-expected.html: Added.
* LayoutTests/fast/layout/relayout-boundary-inside-inline.html: Added.
* Source/WebCore/rendering/RenderObject.cpp:
(WebCore::nearestBaselineContextAncestor):
(WebCore::objectIsRelayoutBoundary):
(WebCore::RenderObject::markContainingBlocksForLayout):

Canonical link: https://commits.webkit.org/292662@main